fixes display issue with form fields where text is being cut off

--- a/modules/forms.scss
+++ b/modules/forms.scss
@@ -133,7 +133,7 @@ form {
   input[type="text"],
   input[type="email"],
   select {
-    height: 2em + ($light * 2);
+    min-height: 2em + ($light * 2);
   }
 
   input {
